re PR c++/8442 (rejects nested template classes)

PR c++/8442
	* decl2.c (handle_class_head): Verify if the looked up name is a
	type or template.
	* pt.c (convert_template_argument): Fix type or template template
	parameter decision logic.

	* g++.dg/template/type2.C: New test.
	* g++.dg/template/ttp3.C: Change expected error message.

From-SVN: r60249